--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tes form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.6/css/dataTables.bootstrap5.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
+    
 </head>
 <body>
     <div class="container">
         <h1 class="text-center p-3"><%= title %></h1>
          
-
-        <table class="table table-bordered table-sm table-responsive">
+          <table id="example" class="table table-bordered table-sm table-striped">
             <thead class="table-dark">
               <tr>
                 <th scope="col">id</th>
@@ -39,6 +42,8 @@
                 <% } %>
             </tbody>
           </table>
+         
+
 
           
           <form action="/tambah" method="post">
@@ -92,7 +97,16 @@
              <input type="submit" class="btn btn-primary mt-4" value="tambahkan" />
           </form>
     </div>
+ 
+   <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+   <script src="https://cdn.datatables.net/2.1.6/js/dataTables.js"></script>
+   <script src="https://cdn.datatables.net/2.1.6/js/dataTables.bootstrap5.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script>
+      new DataTable('#example');
+     </script>
 </body>
 </html>
