--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tes form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.6/css/dataTables.bootstrap5.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -32,18 +34,13 @@
                 </div>
   
                 <div class="row mb-3">
-                  <label for="phone" class="col-sm-2 col-form-label">No HP :</label>
+                  <label id="phone" class="col-sm-2 col-form-label">No HP :</label>
                   <div class="col-sm-10">
-                    <input type="tel" name="no_hp" class="form-control" value="<%= user.no_hp %>">
+                    <input type="text" id="no_hp" placeholder="+62 xxx-xxxx-xxxx" name="no_hp" class="form-control">
                   </div>
                 </div>
   
-                <div class="row mb-3">
-                  <label for="date" class="col-sm-2 col-form-label">Tanggal lahir :</label>
-                  <div class="col-sm-10">
-                    <input type="date" name="tanggal_lahir" class="form-control" value="<%= user.tanggal_lahir %>">
-                  </div>
-                </div>
+             
   
                 <div class="row mb-3">
                   <label for="nama" class="col-sm-2 col-form-label">upload file :</label>
@@ -57,11 +54,15 @@
                   <option value="Lelaki">Lelaki</option>
                   <option value="Perempuan">Perempuan</option>
                 </select>
-               <input type="submit" class="btn btn-primary mt-4" value="tambahkan" />
+               <button type="submit" class="btn btn-primary mt-3">Simpan</button>
             </form>
       </div>
    
-  
+      
+      <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+      <script src="https://cdn.datatables.net/2.1.6/js/dataTables.js"></script>
+      <script src="https://cdn.datatables.net/2.1.6/js/dataTables.bootstrap5.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
   </body>
