--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,7 @@
                 <option value="Lelaki">Lelaki</option>
                 <option value="Perempuan">Perempuan</option>
               </select>
-             <input type="submit" class="btn btn-primary mt-4" value="tambahkan" />
+              <button type="submit" class="btn btn-primary mt-3">Tambahkan</button>
           </form>
     </div>
  
